RA5/RA5_4/4.3/k8s/02-web-deployment.yaml
apiVersion: apps/v2
kind: Deployment
metadata:
  name: web
  namespace: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v2
kind: Service
metadata:
  name: web
  namespace: webapp
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
